# pysurfex

./: .coveralls.yml  .flakeheaven.toml  .gitignore  .travis.yml  Dockerfile_ubuntu_18_04  Dockerfile_ubuntu_20_04  Dockerfile_ubuntu_24_04  INSTALL  README.html  README.md  README.rst  auto_sphinx.py  conf.py  contents.html  create_coverage.sh  create_testdata.sh  ecoclimap.json  ecoclimap_offline.json  ecoclimap_pgd.json  ecoclimap_prep.json  genindex.html  index.html  index.rst  objects.inv  poetry.toml  prepare_testdata.sh  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  stations_desc.txt  test.py  upload_pypi.sh
.github/workflows/: container.yml  linting.yaml  python-package.yml  python-publish.yml
_modules/: index.html
_modules/pysurfex/: binary_input.html  binary_input_legacy.html  bufr.html  cli.html  cmd_parsing.html  configuration.html  datetime_utils.html  ecoclimap.html  fa.html  file.html  forcing.html  geo.html  grib.html  input_methods.html  interpolation.html  namelist.html  namelist_legacy.html  netcdf.html  obs.html  observation.html  obsmon.html  obsoul.html  platform.html  platform_deps.html  pseudoobs.html  read.html  run.html  timeseries.html  titan.html  util.html  variable.html  verification.html
_modules/scheduler/: cli.html  scheduler.html  submission.html  suites.html  tasks.html
_modules/surfex/: assim.html  binary_input.html  bufr.html  cache.html  cli.html  cmd_parsing.html  configuration.html  datetime_utils.html  ecoclimap.html  fa.html  file.html  forcing.html  geo.html  grib.html  input_methods.html  interpolation.html  namelist.html  netcdf.html  obs.html  observation.html  obsmon.html  obsoul.html  platform.html  read.html  run.html  timeseries.html  titan.html  util.html  variable.html
_sources/: README.rst.txt  index.rst.txt
_sources/docs/: example.rst.txt
config/: config_exp_observations.toml  config_exp_surfex.toml
config/domains/: Harmonie_domains.json
config/server/: pc4384.toml
config/submit/: pc4384-test.json  pc4384.json  ppi-centos7.json
config/system/: pc4384.toml
docs/: Makefile  README.html  auto_sphinx.py  example.html  example.rst  genindex.html  index.html  objects.inv  offline_surfex.schema.json  plot_examples.sh  searchindex.js
docs/_sources/: index.rst.txt
docs/html/: index.html  objects.inv  search.html  searchindex.js
docs/sphinx/: example.html
ecf/: InitRun.py  default.py
examples/: assemble.yml  binary_input_data.json  binary_input_data_single_decade.json  ekf_nc.py  ekf_nc.sh  find_subset.py  meps_met_snow_an_inc.py  oi_fa_canari.py  oi_nc.py  surfex_namelists.yml
examples/cfg/: config_exp_EnKF.toml  config_exp_surfex_cy43_dev_ppi.toml  config_exp_surfex_open_surfex_8_1.toml  ppi_centos7.json
examples/domains/: aa.json  drammen.json  met_nordic.json  tromso.json
examples/nam_cy43_dev/: gridpp.json  io.json  prep_from_namelist_values.json  rsmin_sg.json  sice.json  treedrag.json
examples/nam_hm_cy46/: constants.json  epilog_flake.json  epilog_sice.json  epilog_treedrag.json  io.json  meb_settings.json  offline.json  offline_assim_pert.json  offline_isba.json  offline_seaflux.json  offline_seaice.json  offline_sso.json  offline_sso_orotur.json  pgd.json  pgd_arrange_cover.json  pgd_cover.json  pgd_eco_sg.json  pgd_flake.json  pgd_isba.json  pgd_rsmin_mod.json  pgd_rsmin_sg.json  pgd_rsmin_sg_mod.json  pgd_sea.json  pgd_zs.json  prep.json  prep_flake.json  prep_isba.json  prep_isba_dif.json  prep_isba_snow.json  prep_seaflux.json  selected_output.json  soda.json  soda_isba_ekf.json  soda_isba_enkf.json  soda_isba_oi.json  soda_obs.json
examples/nam_open_surfex_8_1/: POLYNOMES_ISBA  io.json  offline.json  sea.json  treedrag.json
examples/offline2extreme/: assemble.yml  config_exp_surfex.toml  offline2extreme.sh  small_domain.json  surfex_namelists.yml  surfexp_binary_input_data.json
examples/settings/: area.yml  (+31 more)
forcing/: __init__.py  area.ini  area.yml  cache.py  commands.py  conf_proj.py  config.ini  config.yml  converter.py  defaults.py  driverForcing.py  driverPlots.py  driver_forcing.py  driver_plots.py  forcingVariable.py  geo.py  grib.py  grib_test.py  inputForSurfex.py  inputFromSurfex.py  interpolation.py  lambert2pos.py  netcdf.py  netcdfpy_variable.py  plot.py  readInputForSurfex.py  surfexForcing.py  surfexGeo.py  timeSeries.py  user.yml  util.py  variable.py
misc/: commands.py
pysurfex/: __init__.py  binary_input.py  binary_input_legacy.py  bufr.py  cache.py  cli.py  cmd_parsing.py  configuration.py  datetime_utils.py  ecoclimap.py  fa.py  file.py  forcing.py  geo.py  grib.py  input_methods.py  interpolation.py  namelist.py  namelist_legacy.py  namelist_new.py  netcdf.py  obs.py  observation.py  obsmon.py  obsoul.py  platform.py  platform_deps.py  plot.py  pseudoobs.py  read.py  run.py  timeseries.py  titan.py  util.py  variable.py  verification.py
scheduler/: __init__.py  cli.py  scheduler.py  submission.py  suites.py  tasks.py
sphinx/: Makefile
surfex/: __init__.py  __version__.py  assim.py  binary_input.py  bufr.py  cache.py  cli.py  cmd_parsing.py  configuration.py  datetime_utils.py  ecoclimap.py  fa.py  file.py  forcing.py  format.py  geo.py  grib.py  gridpp.py  input_methods.py  interpolation.py  io.py  iostuff.py  namelist.py  netcdf.py  obs.py  observation.py  obsmon.py  obsoul.py  platform.py  read.py  run.py  timeseries.py  titan.py  util.py  variable.py
surfexIO/: __init__.py  conf_proj.py  driverPlots.py  inputFromSurfex.py  plot.py  surfexGeo.py  timeSeries.py
test/: test_converter.py  test_ecflow.py  test_firstguess4oi.py  test_forcing.py  test_geo.py  test_grib.py  test_gridpp.py  test_hm2pysurfex.py  test_obs.py  test_obsmon.py  test_oi2soda.py  test_pgd.py  test_plot.py  test_run_binary.py  test_submission.py  test_tasks.py  test_titan.py  test_variable.py
testing/: coverage.sh  test_Variable.py  test_command_line_options.py  test_conf_proj.py  tests.py
tests/: __init__.py  conftest.py  test_2.py  test_Variable.py  test_converter.py  test_forcing.py  test_geo.py  test_pgd.py  test_variable.py  tests.py
(+157 files in other folders)
